<resources>
    <string name="app_name">Prestamo</string>
    <string name="solicitud">Solicitud de Prestamo</string>
    <string name="Rcliente">Registro de Cliente</string>
    <string name="Vcliente">Ver Clientes</string>
    <string name="credito">Registro de Credito</string>
    <string name="prestamo">Registro de Prestamo</string>
    <string name="nombre">Nombre*</string>
    <string name="apellido">Apellido</string>
    <string name="sexo">Sexo</string>
    <string name="telefono">Telefono*</string>
    <string-array name="asexo">
        <item>Femenino</item>
        <item>Masculino</item>
    </string-array>
    <string name="cedula">Cedula*</string>
    <string name="ocupacion">Ocupacion</string>
    <string name="direccion">Direccion*</string>
    <string name="continuar">Continuar</string>
    <string name="monto">Monto Credito</string>
    <string name="interes">Interes (%)</string>
    <string name="plazo">Plazo</string>
    <string name="fecha">Fecha</string>
    <string name="fechafin">Fecha Finalizacion</string>
    <string name="Pagar">Monto a Pagar:</string>
    <string name="cuota">Monto por Cuota:</string>
    <string-array name="ainteres">
        <item>15</item>
        <item>20</item>
        <item>25</item>
    </string-array>
    <string name="fin">Finalizar</string>
    <string name="Error">ERROR!! Campo no puede quedar vacio</string>
    <string name="ErrorBTN">ERROR!! Algunos Campos requeridos estan Vacios</string>
    <string name="gracias">Gracias!!</string>
    <string name="nuevo">NUEVO PRESTAMO</string>
    <string name="verCliente">Ver Cliente</string>
    <string name="verPrestamo">Ver Prestamo</string>
    <string name="about">Acerca De</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="nuevop">Nuevo Prestamo</string>
    <string name="anterior">Anterior</string>
    <string name="siguiente">Siguiente</string>
    <string name="llegoinicio">Llego al Inicio</string>
    <string name="llegofin">Llego al Final</string>
    <string name="cancelPrestamo">Cancelo Ingreso de Nuevo Prestamo</string>
    <string name="cancelCliente">Cancelo Ingreso de Nuevo Cliente</string>
    <string name="ingresoPrestamo">Ingreso de Nuevo Prestamo</string>
    <string name="ingresoCliente">Ingreso de nuevo Cliente</string>
    <string name="ceroClientes">No hay Clientes</string>
    <string name="ceroPrestamos">No hay Prestamos</string>
    <string name="AboutText">Electiva Android</string>
    <string name="copy">Copiar</string>
    <string name="delete">Borrar</string>
    <string name="clientesR">Clientes Registrados</string>
</resources>
